Revert "fix "job" & "address" validation"
This reverts commit a7c8bff72c72bdc17c947a387e220c154f983299.